--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/IvanNik85/reservation-app.git"
   },
   "keywords": [],
-  "author": "IvanNik85",
+  "author": "Jovanović Jovana, Marković Miloš, Nikolić Ivan",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/IvanNik85/reservation-app/issues"
