--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-react": "^7.9.4",  
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
     "css-loader": "^3.5.2",
@@ -33,6 +33,7 @@
     "normalize-css": "^2.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-rnd": "^10.1.8",
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.5",
     "sass-loader": "^8.0.2",
