--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "node ./src/server/server.js",
-    "start:dev": "nodemon ./src/server/server.js",
+    "start:dev": "nodemon -r dotenv/config ./src/server/server.js",
     "build:dev": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "mongoose": "^5.9.9",
     "node-sass": "^4.13.1",
     "normalize-css": "^2.3.1",
     "react": "^16.13.1",
@@ -40,6 +41,7 @@
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.3"
   },
   "nodemonConfig": {
