--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.5",
     "sass-loader": "^8.0.2",
+    "validator": "^13.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
